# AOC2021

./: .gitpod.yml  pyproject.toml
aoc2021/: day1.py  day2.py  day3.py  day5.py  day6.py  day7.py  day8.py
aoc2021/data/: provider.py
aoc2021/goldbach/: main.py
