[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = "Advent Of Code 2021"
authors = ["psi77 <simon@smith77.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
